--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,9 @@ body {
     transition: 0.2s;
 
 }
+.container.active {
+    height: 500px;
+}
 #qr-header {
     text-align: center;
 
@@ -60,5 +63,18 @@ body {
 
 }
 #qr-form button:hover {
+    opacity: 1;
+}
+#qr-code {
+    display: flex;
+    opacity: 0;
+    border: 1px solid #ccc;
+    padding: 30px 0px;
+    margin: 20px 15px;
+    border-radius: 5px;
+    justify-content: center;
+    transition: .5s;
+}
+.container.active #qr-code {
     opacity: 1;
 }
